Style Updated - Adjusted Overall Size - Fixed forumla bug where long text would align left.

--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -2,16 +2,18 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    width: 50rem;
-    height: 30rem;
     justify-content: center;
+    height: 50%;
+    width: 80%;
+    max-width: 100rem;
 }
 
 .calculator {
     display: flex;
     flex-direction: column;
-    width: 50%;
     background: var(--clr-grey-dark);
+    width: 50%;
+    padding: 0.5em;
 }
 
 .display {
@@ -23,15 +25,16 @@
 }
 
 .tab-container {
-    width: 50%;
     background: var(--clr-grey-dark);
+    width: 50%;
 }
 
 @media only screen and (max-width: 50rem) {
     .calculator-container {
         min-width: 20rem;
-        width: 90%;
-        max-width: 25rem;
+        min-height: 30rem;
+        width: 100%;
+        height: 100%;
         background: none;
     }
 
