--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -18,6 +18,7 @@
     justify-content: flex-end;
     align-items: center;
     color: var(--clr-white-primary);
+    text-align: right;
 }
 
 #display {
